修改整体规范，添加部分文章的api